components/test_runner/mock_content_settings_client.cc
@@ -62,7 +62,7 @@ bool MockContentSettingsClient::allowRunningInsecureContent(
 }
 
 bool MockContentSettingsClient::allowAutoplay(bool default_value) {
-  return default_value || flags_->autoplay_allowed();
+  return flags_->autoplay_allowed();
 }
 
 void MockContentSettingsClient::SetDelegate(WebTestDelegate* delegate) {
